blocks/side-navigation/side-navigation.css
/* ... */
.side-navigation .list-section .side-navigation-nested-target button {
  cursor: pointer;
}

.side-navigation-overlay-btn-wrapper button.back-btn {
  font-size: var(--type-body-xs-size);
  line-height: var(--type-body-xs-lh);
  padding: 0;
  border: none;
  color: var(--color-font-grey);
}

.side-navigation-overlay-btn-wrapper button.documentation-btn {
  color: var(--color-font-grey);
  padding: var(--spacing-xxs) var(--spacing-s);
  font-weight: 700;
  border-color: #686868;
}

.side-navigation-overlay-btn-wrapper .documentation-btn .icon-icon-caret-down {
  display: inline-block;
  width: var(--type-body-xs-size);
  height: var(--type-body-xs-size);
  margin-right: var(--spacing-xxs);
  background-position: initial;
}

.side-navigation-overlay-btn-wrapper button.back-btn::before {
  content: "";
  display: inline-block;
  background-image: url("/icons/icon-back-arrow.svg");
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
  width: 16px;
  height: 12px;
  margin-right: var(--spacing-xxs);
}

.side-navigation .doc-search {
  padding: unset;
}

.results-wrapper {
  list-style: none;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 16px;
  margin: 0;
  padding: var(--spacing-xs) 0;
  display: none;
  box-sizing: border-box;
}

.results-wrapper.open {
  display: grid;
}

/* combined header search result styles here for consistency */
.results-wrapper .article-card {
  text-decoration: none;
  color: black;
  text-align: left;
  box-sizing: border-box;
  display: block;
}

.results-wrapper .article-card .article-card-body p,
.gnav-search-results .article-card .article-card-body p {
  color: var(--color-black);
  font-size: var(--type-body-s-size);
  line-height: var(--type-body-s-lh);
}

.results-wrapper .article-card-image,
.gnav-search-results .article-card-image {
  width: 100%;
  height: auto;
  aspect-ratio: 4 / 3;
  overflow: hidden;
  border-radius: var(--image-border-radius-l);

  /* fix for ios overflow with border-radius not working */
  isolation: isolate;
}

.results-wrapper .article-card-image img,
.gnav-search-results .article-card-image img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  transition: var(--transition-ease-in-out);
}

.results-wrapper .article-card:hover img,
.gnav-search-results .article-card:hover img {
  transform: scale(1.07);
}

.results-wrapper .article-card-body h3,
.gnav-search-results .article-card-body h3 {
  font-size: var(--type-heading-m-size);
  line-height: var(--type-heading-m-lh);
  margin-top: var(--spacing-s);
  margin-bottom: var(--spacing-xs);
}

.gnav-search-results .article-card-body h3 {
  overflow: unset;
  overflow-y: clip;
  margin-top: var(--spacing-xs);
}

/* black overlay curtain */
.side-navigation-wrapper > .side-navigation-curtain {
  pointer-events: none;
  width: 100vw;
  max-width: none;
  height: 100%;
  position: fixed;
  inset: 0;
  background: var(--overlay-curtain-bg-color);
  backdrop-filter: var(--overlay-curtain-bg-filter);
  opacity: 0;
  transition: var(--nav-sidebar-transition);
}

.side-navigation-wrapper > .side-navigation-curtain.is-open {
  pointer-events: auto;
  opacity: 1;
  z-index: 9990;
}

@media screen and (width >= 600px) {
  .side-navigation-wrapper {
    padding: var(--spacing-xxxs) 0 0;
  }

  .side-navigation-wrapper > div {
    max-width: var(--grid-tablet-container-width);
  }

  .side-navigation-overlay-btn-wrapper {
    margin: var(--spacing-xs) 0;
  }
}

@media screen and (width >= 768px) {
  .side-navigation-wrapper > div {
    max-width: var(--grid-tablet-container-width);
  }

  .results-wrapper {
    padding: var(--spacing-s) 0;
  }

  .side-navigation {
    padding: var(--spacing-s) var(--spacing-xl);
  }

  .results-wrapper .article-card-body h3 {
    font-size: var(--type-heading-l-size);
    line-height: var(--type-heading-l-lh);
    margin-top: var(--spacing-m);
  }
}

@media screen and (width >= 900px) {
  .side-navigation-wrapper > div {
    max-width: 100%;
    margin-left: 0;
    margin-right: 0;
  }

  .side-navigation-wrapper {
    width: 300px;
    padding: 0;
    min-height: 80vh;
  }

  /* .side-navigation-wrapper ~ .section {
    display: none;
  } */

  /* .side-navigation-wrapper.ready + .section {
    display: block;
  } */

  .side-navigation-wrapper.expand {
    width: calc(100% - var(--side-navigation-bar-gap));
    display: flex;
    align-items: flex-start;
  }

  .side-navigation-wrapper > .search-input-wrapper {
    display: none;
  }

  .side-navigation-overlay-btn-wrapper,
  .side-navigation-overlay-btn-wrapper.in-doc-page {
    display: none;
  }

  .side-navigation {
    display: block;
    padding: var(--spacing-ml) var(--spacing-s);
  }

  .side-navigation .list-section,
  .side-navigation .list-section:first-of-type {
    border: none;
    display: block;
    padding: 0 0 var(--spacing-xs);
  }

  .side-navigation .list-section li,
  .side-navigation .list-section a,
  .side-navigation .list-section button {
    font-size: var(--type-body-xs-size);
  }

  .side-navigation .list-section > a:first-of-type {
    display: inline-block;
    font-size: var(--type-body-s-size);
    padding-bottom: var(--spacing-xxs);
  }

  .side-navigation .list-section .list-section-inner li span {
    display: flex;
  }

  .side-navigation .side-navigation-nested-target ul {
    display: block;
  }

  .results-wrapper {
    width: calc(100% - 300px);
    gap: var(--spacing-s);
  }
}

@media screen and (width >= 1250px) {
  .side-navigation-wrapper > div {
    max-width: var(--grid-desktop-container-width);
  }

  .side-navigation-wrapper.expand + .section.content {
    margin-left: 16%;
    margin-right: 16%;
  }
}

